x/programs/rust/sdk-macros/tests/ui/fail/too-many-state-key-variants.stderr
error: Cannot exceed 256 variants
  --> tests/ui/fail/too-many-state-key-variants.rs:10:9
   |
10 |         Variant256,
   |         ^^^^^^^^^^
